--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: flex-end;
-    background: url("../images/DSC_0205 (2).jpg");
+    background: url("../images/pandu.JPG");
     background-size: cover;
     background-position: center;
     background-color: #34495e;
