--- a/css/style.css
+++ b/css/style.css
@@ -84,7 +84,7 @@ header ul{
 .skills{
     width: 60%;
     margin: 0 auto;
-    padding: 50px 0;
+    padding: 40px 0;
     text-align: center;
     z-index: 99;
 }
@@ -203,7 +203,19 @@ header ul{
     background-image: url("../images/black-background-wood-i-e29da4-4k-hd-desktop-wallpaper-for-4k-ultra-hd-1024x640.jpg");
 }
 
+.contact{
+    margin-top: 4%;
+}
 
+.experience{
+    margin-top: 4%;
+}
+.project{
+    margin-top: 3%;
+}
+.skills{
+    margin-top: 3%;
+}
 
 
 
