--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,7 @@ header li a{
     color: #ffffff;
     text-transform: uppercase;
     text-decoration: none;
+    margin: 0 40px;
 }
 header ul{
     list-style-type: none;
@@ -202,19 +203,19 @@ header ul{
     background-image: url("../images/black-background-wood-i-e29da4-4k-hd-desktop-wallpaper-for-4k-ultra-hd-1024x640.jpg");
 }
 
-.contact{
-    margin-top: 3%;
-}
+/*.contact{*/
+    /*margin-top: 15%;*/
+/*}*/
 
-.experience{
-    margin-top: 3%;
-}
-.project{
-    margin-top: 3%;
-}
-.skills{
-    margin-top: 3%;
-}
+/*.experience{*/
+    /*margin-top: 15%;*/
+/*}*/
+/*.project{*/
+    /*margin-top: 15%;*/
+/*}*/
+/*.skills{*/
+    /*margin-top: 15%;*/
+/*}*/
 
 
 
