--- a/css/style.css
+++ b/css/style.css
@@ -203,19 +203,19 @@ header ul{
     background-image: url("../images/black-background-wood-i-e29da4-4k-hd-desktop-wallpaper-for-4k-ultra-hd-1024x640.jpg");
 }
 
-/*.contact{*/
-    /*margin-top: 15%;*/
-/*}*/
+.contact{
+    margin-top: 15%;
+}
 
-/*.experience{*/
-    /*margin-top: 15%;*/
-/*}*/
-/*.project{*/
-    /*margin-top: 15%;*/
-/*}*/
-/*.skills{*/
-    /*margin-top: 15%;*/
-/*}*/
+.experience{
+    margin-top: 15%;
+}
+.project{
+    margin-top: 15%;
+}
+.skills{
+    margin-top: 15%;
+}
 
 
 
