--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,7 @@ header{
    text-align: center;
    padding: 25px 0;
    z-index: 99;
-    margin-bottom: 50px;
+    margin-bottom: 30%;
 }
 
 header li a{
