--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,4 @@
-html{
-    overflow-y: scroll;
-}
+
 
 body {
     color: #ffffff;
@@ -16,6 +14,7 @@ body {
     background-attachment: fixed;
     z-index: 9;
     font-family: 'PT Sans Narrow', sans-serif ;
+    margin: 0;
 }
 
 #particles-js{
